--- a/meta-openembedded/meta-oe/conf/layer.conf
+++ b/meta-openembedded/meta-oe/conf/layer.conf
@@ -43,6 +43,23 @@ SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   usb-modeswitch-data->usb-modeswitch \
 "
 
+# ttf.inc inherits fontcache which adds fontconfig-utils to RDEPENDS
+SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
+  terminus-font->fontconfig \
+  ttf-arphic-uming->fontconfig \
+  ttf-dejavu->fontconfig \
+  ttf-droid->fontconfig \
+  ttf-gentium->fontconfig \
+  ttf-hunkyfonts->fontconfig \
+  ttf-inconsolata->fontconfig \
+  ttf-liberation->fontconfig \
+  ttf-mplus->fontconfig \
+  ttf-sazanami->fontconfig \
+  ttf-tlwg->fontconfig \
+  ttf-ubuntu-font-family->fontconfig \
+  ttf-wqy-zenhei->fontconfig \
+"
+
 FREESMARTPHONE_GIT = "git://git.freesmartphone.org"
 
 # Override security flags
