--- a/meta-openembedded/meta-oe/conf/layer.conf
+++ b/meta-openembedded/meta-oe/conf/layer.conf
@@ -41,6 +41,7 @@ SIGGEN_EXCLUDERECIPES_ABISAFE += " \
 
 SIGGEN_EXCLUDE_SAFE_RECIPE_DEPS += " \
   usb-modeswitch-data->usb-modeswitch \
+  lmsensors->lmsensors-config \
 "
 
 # ttf.inc inherits fontcache which adds fontconfig-utils to RDEPENDS
