--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -145,6 +145,7 @@ PNWHITELIST_networking-layer += " \
 PNWHITELIST_openembedded-layer += " \
     gmock \
     gtest \
+    libmicrohttpd \
     libsocketcan \
     can-utils \
     giflib \
