--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -292,3 +292,7 @@ PACKAGE_ARCH_pn-rhino = "${TUNE_PKGARCH}"
 # Set a proper filter to classify internal vs. external patches (only internal
 # patches are of interest) in the patch summary created by inputanalyzer.
 INPUTANALYZER_WHITELIST = '/(meta|meta-yocto-bsp|meta-intel|meta-java|meta-oic|meta-oe|meta-networking|meta-python|meta-intel-iot-middleware|meta-security-isafw)/*$ ^$'
+
+# MASK incompatible .bbappends from meta-soletta. meta-soletta's systemd
+# .bbappend is in conflict with our needs.
+BBMASK .= "|meta-soletta/recipes-configure/systemd"
