--- a/meta-ostro-bsp/conf/layer.conf
+++ b/meta-ostro-bsp/conf/layer.conf
@@ -16,6 +16,15 @@ BBFILE_PRIORITY_quark-bsp = "6"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " \
     spi-minnowmax-board \
+    i2c-minnowmax-board \
+"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-quark = " \
+    i2c-quark-board \
+"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-edison = " \
+    i2c-edison-board \
 "
 
 # Could be also in edison.conf, kept here for sake of consistency.
