--- a/meta-ostro/conf/layer.conf
+++ b/meta-ostro/conf/layer.conf
@@ -1,5 +1,6 @@
-# We have a conf and classes directory, add to BBPATH
-BBPATH .= ":${LAYERDIR}"
+# We have a conf and classes directory, add to BBPATH. Add it at the
+# front because we want to override files like fs-perms.txt.
+BBPATH =. "${LAYERDIR}:"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
