--- a/meta-ostro-bsp/recipes-kernel/linux-yocto/linux-yocto/6lowpan-802154.cfg
+++ b/meta-ostro-bsp/recipes-kernel/linux-yocto/linux-yocto/6lowpan-802154.cfg
@@ -1,7 +1,5 @@
 CONFIG_IEEE802154=m
 CONFIG_IEEE802154_6LOWPAN=m
 CONFIG_MAC802154=m
-# CONFIG_IEEE802154_FAKELB is not set
-# CONFIG_IEEE802154_AT86RF230 is not set
-# CONFIG_IEEE802154_MRF24J40 is not set
+CONFIG_IEEE802154_AT86RF230=m
 CONFIG_IEEE802154_CC2520=m
