--- a/meta-ostro-bsp/conf/layer.conf
+++ b/meta-ostro-bsp/conf/layer.conf
@@ -20,6 +20,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-quark = " \
+    spi-quark-board \
     i2c-quark-board \
 "
 
