meta-appfw: classes, recipes-appfw: update to match new app-fw.
Changed helper classes and example applications to match the
latest appfw changes. Simplified helper classes by ripping
out obsolete/unused features.

Changed application directory ownership and permissions to
root.root/0755. Due to popular demand renamed IOT_APP_HOME
to IOT_APP_ROOT and changed all prefix from IOT to OSTRO.
Make packaged application rdepend on iot-app-fw.

Removed obsolete old test applications. Renamed *-native
sample applications to help broken Python scripts better deal
with them.

(From meta-appfw rev: 130374d687e17bc82b169b4990bafe4fd8391f68)

Signed-off-by: Krisztian Litkey <krisztian.litkey@intel.com>

--- a/meta-appfw/recipes-appfw/example-app-c/files/configure.ac
+++ b/meta-appfw/recipes-appfw/example-app-c/files/configure.ac
@@ -4,7 +4,7 @@
 
 AC_PREREQ(2.59)
 
-AC_INIT([example-app-native], [0.1])
+AC_INIT([example-app-c], [0.1])
 
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_MACRO_DIR([m4])
@@ -65,7 +65,7 @@ AC_CONFIG_FILES([build-aux/shave
                  build-aux/shave-libtool
                  Makefile
                  src/Makefile
-                 src/hello-world.manifest
+                 src/manifest
 		 ])
 AC_OUTPUT
 
