--- a/meta-appfw/recipes-appfw/example-app-node/files/package.json
+++ b/meta-appfw/recipes-appfw/example-app-node/files/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app",
+  "name": "example-app-node",
   "version": "0.0.1",
   "description": "Example node app for testing recipes.",
   "main": "example.js",
