--- a/meta-ostro/conf/layer.conf
+++ b/meta-ostro/conf/layer.conf
@@ -6,6 +6,9 @@ BBPATH =. "${LAYERDIR}:"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bbappend"
 
+# Set a variable to get to the top of the metadata location
+IMAGE_DSK_BASE := '${LAYERDIR}'
+
 BBFILE_COLLECTIONS += "ostro"
 BBFILE_PATTERN_ostro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_ostro = "6"
