--- a/meta-ostro-bsp/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-ostro-bsp/meta-edison-bsp/conf/machine/edison.conf
@@ -70,5 +70,5 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            xf86-video-dummy"
 
-INITRAMFS_IMAGE ?= "core-image-initramfs-edison"
-INITRAMFS_IMAGE_BUNDLE ?= "1"
+#INITRAMFS_IMAGE ?= "core-image-initramfs-edison"
+#INITRAMFS_IMAGE_BUNDLE ?= "1"
