--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -296,3 +296,6 @@ INPUTANALYZER_WHITELIST = '/(meta|meta-yocto-bsp|meta-intel|meta-java|meta-oic|m
 # MASK incompatible .bbappends from meta-soletta. meta-soletta's systemd
 # .bbappend is in conflict with our needs.
 BBMASK .= "|meta-soletta/recipes-configure/systemd"
+# FIXME: Looks like blacklist/whitelist cannot prevent bitbake to ignore parsing *broken*
+# recipes. Use BBMASK to skip scsirastools because it fails with 'missing bblass'.
+BBMASK .= "|meta-openembedded/meta-oe/recipes-extended/scsirastools"
