meta-appfw: example apps: simplify installation
Primarily this removes the need to install files explicitly into the
/apps directory. Instead, a do_install post-processing method
relocates files installed by the recipe into the normal locations into
the /apps directory.

example-app-c is now much more like a normal autotools projects. It
still installs its own manifest file. It might be better to do that in
the recipe, because then one can take an unmodified upstream project
and turn it into an Ostro app without having to touch the upstream,
non-Ostro source code.

example-app-node still installs into the final /apps location, but that
could also be changed.

Using a postinst instead of do_install_append has some advantages:
- it works even when do_install is a Python method (one cannot
  append shell commands to a Python method, leads to syntax errors)
- the additional code is more likely to run after all recipe install
  code (which may be in other do_install_appends with random order
  of appending the fragments); however, additional postfuncs might
  still run after us

Several other minor cleanups are also included:
- fix file permissions inside the app recipes by using "install"
- ${OSTRO_APP_ROOT} is now packaged by default when inheriting
  ostro-app.bbclass
- PACKAGES = ${PN} is redundant

(From meta-appfw rev: ca68e34f82a4b09b85ba3461563ca454da57ac99)

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-appfw/recipes-appfw/example-app-c/files/src/Makefile.am
+++ b/meta-appfw/recipes-appfw/example-app-c/files/src/Makefile.am
@@ -1,8 +1,7 @@
 SUBDIRS = .
 MANIFEST_FILE = manifest
 
-example_PROGRAMS = hello-world
-exampledir = @INSTALL_PATH@
+bin_PROGRAMS = hello-world
 
 hello_world_SOURCES = hello-world.c
 
