--- a/meta-appfw/recipes-appfw/example-app-c/files/src/manifest.in
+++ b/meta-appfw/recipes-appfw/example-app-c/files/src/manifest.in
@@ -7,7 +7,7 @@
         "FROB": "nicate",
         "FOOBAR": "xyzzy",
     },
-    "command": [ "/bin/hello-world" ],
+    "command": [ "@bindir@/hello-world" ],
     "autostart": "false",
      "container": {
         "type": "nspawn",
