meta-appfw: example-app-c: removed unused cruft.
Removed old unused configure options.

(From meta-appfw rev: 7398c2a5a0e019ee4053c4e6b1f0a44665b0797c)

Signed-off-by: Krisztian Litkey <krisztian.litkey@intel.com>

--- a/meta-appfw/recipes-appfw/example-app-c/files/configure.ac
+++ b/meta-appfw/recipes-appfw/example-app-c/files/configure.ac
@@ -32,15 +32,7 @@ PKG_PROG_PKG_CONFIG
 AC_PATH_X
 AC_CHECK_HEADERS([stdio.h])
 
-AC_ARG_WITH(package-name,
-            [  --with-package-name      package name],
-            [pkg_name=${with_package_name}], AC_MSG_ERROR([no package-name specified]))
-AC_SUBST(PACKAGE_NAME, [$pkg_name])
-
-AC_ARG_WITH(install-path, 
-            [  --with-install-path      where the app. files should go],
-            [install_path="${with_install_path}"], AC_MSG_ERROR([no install-path provided]))
-AC_SUBST(INSTALL_PATH, [$install_path])
+AC_SUBST(PACKAGE_NAME, [example-app-c])
 
 AC_ARG_WITH(manifest-path, 
             [  --with-manifest-path      where the manifest file should go],
