--- a/meta-ostro/recipes-security/openssh/files/openssh-ipv4.conf
+++ b/meta-ostro/recipes-security/openssh/files/openssh-ipv4.conf
@@ -2,5 +2,5 @@
 After=iptables.service
 
 [Socket]
-ExecStartPre=/usr/sbin/iptables -A INPUT -p tcp --dport ssh -j ACCEPT
-ExecStopPost=/usr/sbin/iptables -D INPUT -p tcp --dport ssh -j ACCEPT
+ExecStartPre=/usr/sbin/iptables -w -A INPUT -p tcp --dport ssh -j ACCEPT
+ExecStopPost=/usr/sbin/iptables -w -D INPUT -p tcp --dport ssh -j ACCEPT
