meta-iot-web: iot-rest-api-server: wait for xtables lock.
There is a race condition where parallel iptables and ip6tables invocations
fail to obtain the xtables lock. This causes setting the firewall rules to
fail. Add "-w" option to the command lines to wait for the lock instead of
giving up.

(From meta-iot-web rev: fa308259980edb8e0109dbebc31f7aa4fac7d155)

Signed-off-by: Ismo Puustinen <ismo.puustinen@intel.com>

--- a/meta-iot-web/recipes-web/iot-rest-api-server/files/iot-rest-api-server-ipv4.conf
+++ b/meta-iot-web/recipes-web/iot-rest-api-server/files/iot-rest-api-server-ipv4.conf
@@ -2,5 +2,5 @@
 After=iptables.service
 
 [Socket]
-ExecStartPre=/usr/sbin/iptables -A INPUT -p tcp --dport 8000 -j ACCEPT
-ExecStopPost=/usr/sbin/iptables -D INPUT -p tcp --dport 8000 -j ACCEPT
+ExecStartPre=/usr/sbin/iptables -w -A INPUT -p tcp --dport 8000 -j ACCEPT
+ExecStopPost=/usr/sbin/iptables -w -D INPUT -p tcp --dport 8000 -j ACCEPT
