--- a/meta-ostro/conf/layer.conf
+++ b/meta-ostro/conf/layer.conf
@@ -12,3 +12,9 @@ IMAGE_DSK_BASE := '${LAYERDIR}'
 BBFILE_COLLECTIONS += "ostro"
 BBFILE_PATTERN_ostro := "^${LAYERDIR}/"
 BBFILE_PRIORITY_ostro = "6"
+
+# This and the corresponding CONF_VERSION value in local.conf.sample
+# need to be increased by one each time a change is made to
+# local.conf.sample that requires manually updating a local.conf after
+# updating the meta data.
+LOCALCONF_VERSION = "1"
