--- a/meta-ostro/conf/distro/ostro.conf
+++ b/meta-ostro/conf/distro/ostro.conf
@@ -91,6 +91,9 @@ WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
 WARN_QA_remove = "${WARN_TO_ERROR_QA}"
 ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 
+# Add some Ostro OS specific checks in addition to those provided by sanity.bbclass.
+INHERIT += "ostro-sanity"
+
 # Only specific recipes from the layers in meta-openembedded are
 # supported in combination with Ostro OS, even though all of
 # meta-openembedded gets imported into the combined repository.
