meta-ostro-bsp: backport MMA7455 device driver for linux-yocto-4.4
The Accel sensor MMA7455 driver is missing in linux-yocto-4.4,
backport it to support more IIO sensors

Fixes: IOTOS-757/partial
Upstream-Status:Backport[https://git.kernel.org/cgit/linux/kernel/git/torvalds/linux.git/commit/?id=a84ef0d181d917125f1f16cffe53f84c19968969]

(From meta-ostro-bsp rev: a36e2f6d66806a1ae814b2b09eed74c34c630635)

Signed-off-by: Yong Li <yong.b.li@intel.com>

--- a/meta-ostro-bsp/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
+++ b/meta-ostro-bsp/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
@@ -71,3 +71,6 @@ CONFIG_IIO_ST_MAGN_3AXIS=m
 CONFIG_IIO_ST_MAGN_I2C_3AXIS=m
 CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
 CONFIG_BH1750=m
+CONFIG_MMA7455=m
+CONFIG_MMA7455_I2C=m
+
