combo layer: add meta-swupd
meta-swupd provides support for building and using the Clear Linux
swupd update mechanism.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/conf/combo-layer.conf
+++ b/conf/combo-layer.conf
@@ -122,3 +122,9 @@ hook = conf/combo-layerhook-generic.sh
 branch = master
 last_revision = 708e5b9bd7c6cfd008e98249e09818bca12b63d0
 
+[meta-swupd]
+src_uri = git://git.yoctoproject.org/meta-swupd
+dest_dir = meta-swupd
+hook = conf/combo-layerhook-generic.sh
+branch = master
+last_revision =
